--- a/style/loading.css
+++ b/style/loading.css
@@ -18,5 +18,6 @@ body {
 .bg {
     width: 100vw;
     height: 100vh;
-    background-image: url()
+    background-image: url('photo.avif');
+    position: absolute;
 }
