--- a/style/loading.css
+++ b/style/loading.css
@@ -13,6 +13,7 @@ body {
 
 .loading-text {
     font-size: 50px;
+    opracity: 2pc;
 }
 
 .bg {
@@ -24,4 +25,5 @@ body {
     bachground-size: cover;
     bckground-positiion: center;
     z-index: -1;
+    filter: blur(-50);
 }
