--- a/style/search.css
+++ b/style/search.css
@@ -22,7 +22,7 @@ body {
     border: 0;
     font-size: 18px:
     padding: 15px;
-    height: 50px;
+    height: 15px;
     width: 50px;
     transition: width 1s ease;
 }
@@ -42,4 +42,11 @@ body {
 
     .input:focus {
         outline: none;
+    }
+    .search.active .btn {
+        width: 200px;
+    }
+
+    .search.active .btn {
+        transform: translateX(198px);
     }
